# MathChain

./: .build.sh  .gitignore  .gitmodules  Cargo.toml  Cross.toml  README.md  build.sh  customSpec.json  start.sh  test.json
consensus/: Cargo.toml
consensus/primitives/: Cargo.toml
consensus/primitives/src/: lib.rs
consensus/src/: aux_schema.rs  lib.rs
docker/: Dockerfile  Dockerfile.aarch64-linux-gnu  Dockerfile.arm-linux-gnueabihf  Dockerfile.armv7-linux-gnueabihf  Dockerfile.x86_64-linux-gnu
docs/: README.md  _sidebar.md  index.html
docs/en/: _sidebar.md  a.md
docs/zh-CN/: README.md  _sidebar.md
frame/account-service/: Cargo.toml
frame/balances/: Cargo.toml  README.md
frame/balances/src/: benchmarking.rs  lib.rs  tests.rs  tests_composite.rs  tests_local.rs  tests_reentrancy.rs  weights.rs
frame/secret-store/module/: Cargo.toml
frame/secret-store/module/src/: blockchain_storage.rs  document_key_shadow_retrieval.rs  document_key_store.rs  entity_id_storage.rs  key_server_set.rs  key_server_set_storage.rs  lib.rs  mock.rs  server_key_generation.rs  server_key_retrieval.rs  service.rs
frame/secret-store/primitives/: Cargo.toml
frame/secret-store/primitives/src/: acl_storage.rs  key_server_set.rs  key_servers_mask.rs  lib.rs  service.rs
frame/validator-set/: Cargo.toml
frame/validator-set/src/: lib.rs
node/: Cargo.toml
node/res/: galois.json  mathchain.json
node/src/: chain_spec.rs  cli.rs  command.rs  rpc.rs  service.rs
node/src/service/: galois.rs  mathchain.rs  mod.rs
pallets/account-service/: Cargo.toml
pallets/account-service/src/: lib.rs
pallets/template/: Cargo.toml
pallets/template/src/: lib.rs  mock.rs
pallets/validator-set/: Cargo.toml
pallets/validator-set/src/: lib.rs
runtime/: Cargo.toml
runtime/galois/: Cargo.toml
runtime/galois/src/: constants.rs  lib.rs
runtime/mathchain/: Cargo.toml
runtime/mathchain/src/: lib.rs
runtime/src/: lib.rs
service/: Cargo.toml
service/src/: lib.rs
