# [profile.release]
# panic = 'unwind'

[workspace]
members = [
    'node',
    # 'pallets/template',
    'frame/account-service',
    # 'frame/balances',
    'frame/validator-set',
    'consensus',
    'consensus/primitives',
    'runtime',
    'runtime/galois',
    'runtime/mathchain',
]
exclude = ["vendor"]
