[package]
name = "mathchain-consensus"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Frontier consensus for substrate"
edition = "2018"
license = "GPL-3.0-or-later WITH Classpath-exception-2.0"
repository = "https://github.com/mathwallet/MathChain"

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.1", features = ["derive"] }
sp-core = {git = "https://github.com/paritytech/substrate.git", rev = "5f73ba1f" }
sp-blockchain = {git = "https://github.com/paritytech/substrate.git", rev = "5f73ba1f" }
sp-runtime = {git = "https://github.com/paritytech/substrate.git", rev = "5f73ba1f" }
sp-api = {git = "https://github.com/paritytech/substrate.git", rev = "5f73ba1f" }
sc-client-api = {git = "https://github.com/paritytech/substrate.git", rev = "5f73ba1f" }
sp-block-builder = {git = "https://github.com/paritytech/substrate.git", rev = "5f73ba1f" }
sp-inherents = {git = "https://github.com/paritytech/substrate.git", rev = "5f73ba1f" }
mathchain-consensus-primitives = { version = "0.1.0", path = "primitives" }
sp-consensus = { git = "https://github.com/paritytech/substrate.git", rev = "5f73ba1f" }
log = "0.4.8"
futures = { version = "0.3.1", features = ["compat"] }
sp-timestamp = { git = "https://github.com/paritytech/substrate.git", rev = "5f73ba1f" }
derive_more = "0.99.2"
prometheus-endpoint = { package = "substrate-prometheus-endpoint", git = "https://github.com/paritytech/substrate.git", rev = "5f73ba1f"}
ethereum = { version = "0.7.1", features = ["with-codec"] }
async-trait = "0.1"
