[package]
authors = ['Mathwallet DevHub <https://github.com/mathwallet>']
build = 'build.rs'
description = 'A fresh FRAME-based Substrate node, ready for hacking.'
edition = '2018'
homepage = 'https://mathwallet.net/mathchain'
license = 'Unlicense'
name = 'mathchain'
repository = 'https://github.com/mathwallet/MathChain/'
version = '0.7.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[[bin]]
name = 'mathchain'

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate.git", rev = "2a7aefb9" }

[dependencies]
futures = "0.3.4"
log = "0.4.8"
jsonrpc-core = '15.0.0'
jsonrpc-pubsub = "15.0.0"
structopt = '0.3.8'
array-bytes = { version = "0.3.0" }

# local dependencies
mathchain-runtime = { path = '../runtime', version = '0.1.0' }
galois-runtime-config = { path = '../runtime/galois', package = 'mathchain-runtime-galois'}
mathchain-runtime-config = { path = '../runtime/mathchain', package = 'mathchain-runtime-mathchain'}

# Substrate dependencies
frame-benchmarking = { git = "https://github.com/paritytech/substrate.git", rev = "2a7aefb9" }
frame-benchmarking-cli = { version = '3.0.0', git = "https://github.com/paritytech/substrate.git", rev = "2a7aefb9" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate.git", rev = "2a7aefb9" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate.git", rev = "2a7aefb9" }
sc-cli = { features = ['wasmtime'], git = "https://github.com/paritytech/substrate.git", rev = "2a7aefb9" }
sc-client-api = { git = "https://github.com/paritytech/substrate.git", rev = "2a7aefb9" }
sc-consensus = { git = "https://github.com/paritytech/substrate.git", rev = "2a7aefb9" }
sc-consensus-aura = { git = "https://github.com/paritytech/substrate.git", rev = "2a7aefb9" }
sc-executor = { features = ['wasmtime'], git = "https://github.com/paritytech/substrate.git", rev = "2a7aefb9" }
sc-network = { git = "https://github.com/paritytech/substrate.git", rev = "2a7aefb9" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate.git", rev = "2a7aefb9" }
sc-rpc = { git = "https://github.com/paritytech/substrate.git", rev = "2a7aefb9" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate.git", rev = "2a7aefb9" }
sc-service = { features = ['wasmtime'], git = "https://github.com/paritytech/substrate.git", rev = "2a7aefb9" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate.git", rev = "2a7aefb9" }
sc-consensus-manual-seal = { git = "https://github.com/paritytech/substrate.git", rev = "2a7aefb9" }
sp-api = { git = "https://github.com/paritytech/substrate.git", rev = "2a7aefb9" }
sp-block-builder = { git = "https://github.com/paritytech/substrate.git", rev = "2a7aefb9" }
sp-blockchain = { git = "https://github.com/paritytech/substrate.git", rev = "2a7aefb9" }
sp-consensus = { git = "https://github.com/paritytech/substrate.git", rev = "2a7aefb9" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate.git", rev = "2a7aefb9" }
sp-core = { git = "https://github.com/paritytech/substrate.git", rev = "2a7aefb9" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate.git", rev = "2a7aefb9" }
sp-inherents = { git = "https://github.com/paritytech/substrate.git", rev = "2a7aefb9" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", rev = "2a7aefb9" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate.git", rev = "2a7aefb9" }
sp-timestamp = { git = "https://github.com/paritytech/substrate.git", rev = "2a7aefb9" }
sc-keystore = { git = "https://github.com/paritytech/substrate.git", rev = "2a7aefb9" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate.git", rev = "2a7aefb9" }

mathchain-consensus = { path = "../consensus" }
pallet-evm = { git = "https://github.com/mathwallet/frontier", branch = "update_reference_0826" }
pallet-ethereum = { git = "https://github.com/mathwallet/frontier", branch = "update_reference_0826" }
pallet-dynamic-fee = { git = "https://github.com/mathwallet/frontier", branch = "update_reference_0826" }
fc-consensus = { git = "https://github.com/mathwallet/frontier", branch = "update_reference_0826" }
fp-consensus = { git = "https://github.com/mathwallet/frontier", branch = "update_reference_0826" }
fc-rpc = { git = "https://github.com/mathwallet/frontier", branch = "update_reference_0826" }
fp-rpc = { git = "https://github.com/mathwallet/frontier", branch = "update_reference_0826" }
fc-rpc-core = { git = "https://github.com/mathwallet/frontier", branch = "update_reference_0826" }
sc-telemetry = { git = "https://github.com/paritytech/substrate.git", rev = "2a7aefb9" }
fc-db = { git = "https://github.com/mathwallet/frontier", branch = "update_reference_0826" }
fc-mapping-sync = { git = "https://github.com/mathwallet/frontier", branch = "update_reference_0826" }

[features]
runtime-benchmarks = ['mathchain-runtime/runtime-benchmarks']
