[package]
authors = ['Mathwallet DevHub <https://github.com/mathwallet>']
build = 'build.rs'
description = 'A fresh FRAME-based Substrate node, ready for hacking.'
edition = '2018'
homepage = 'https://mathwallet.net/mathchain'
license = 'Unlicense'
name = 'mathchain'
repository = 'https://github.com/mathwallet/MathChain/'
version = '0.7.0'

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[[bin]]
name = 'mathchain'

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate" }

[dependencies]
futures = "0.3.4"
log = "0.4.8"
jsonrpc-core = '15.0.0'
jsonrpc-pubsub = "15.0.0"
structopt = '0.3.8'
array-bytes = { version = "0.3.0" }

# local dependencies
mathchain-runtime = { path = '../runtime', version = '0.1.0' }
galois-runtime-config = { path = '../runtime/galois', package = 'mathchain-runtime-galois'}
mathchain-runtime-config = { path = '../runtime/mathchain', package = 'mathchain-runtime-mathchain'}

# Substrate dependencies
frame-benchmarking = { git = "https://github.com/paritytech/substrate" }
frame-benchmarking-cli = { git = "https://github.com/paritytech/substrate" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate" }
sc-cli = { features = ['wasmtime'], git = "https://github.com/paritytech/substrate" }
sc-client-api = { git = "https://github.com/paritytech/substrate" }
sc-consensus = { git = "https://github.com/paritytech/substrate" }
sc-consensus-aura = { git = "https://github.com/paritytech/substrate" }
sc-executor = { features = ['wasmtime'], git = "https://github.com/paritytech/substrate" }
sc-network = { git = "https://github.com/paritytech/substrate" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate" }
sc-rpc = { git = "https://github.com/paritytech/substrate" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate" }
sc-service = { features = ['wasmtime'], git = "https://github.com/paritytech/substrate" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate" }
sc-consensus-manual-seal = { git = "https://github.com/paritytech/substrate" }
sp-api = { git = "https://github.com/paritytech/substrate" }
sp-block-builder = { git = "https://github.com/paritytech/substrate" }
sp-blockchain = { git = "https://github.com/paritytech/substrate" }
sp-consensus = { git = "https://github.com/paritytech/substrate" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate" }
sp-core = { git = "https://github.com/paritytech/substrate" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate" }
sp-inherents = { git = "https://github.com/paritytech/substrate" }
sp-runtime = { git = "https://github.com/paritytech/substrate" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate" }
sp-timestamp = { git = "https://github.com/paritytech/substrate" }
sc-keystore = { git = "https://github.com/paritytech/substrate" }
substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate" }

pallet-evm = { git = "https://github.com/paritytech/frontier", branch = "master" }
pallet-ethereum = { git = "https://github.com/paritytech/frontier", branch = "master" }
pallet-dynamic-fee = { git = "https://github.com/paritytech/frontier", branch = "master" }
fc-consensus = { git = "https://github.com/paritytech/frontier", branch = "master" }
fp-consensus = { git = "https://github.com/paritytech/frontier", branch = "master" }
fc-rpc = { git = "https://github.com/paritytech/frontier", branch = "master" }
fp-rpc = { git = "https://github.com/paritytech/frontier", branch = "master" }
fc-rpc-core = { git = "https://github.com/paritytech/frontier", branch = "master" }
sc-telemetry = { git = "https://github.com/paritytech/substrate" }
fc-db = { git = "https://github.com/paritytech/frontier", branch = "master" }
fc-mapping-sync = { git = "https://github.com/paritytech/frontier", branch = "master" }

[features]
runtime-benchmarks = ['mathchain-runtime/runtime-benchmarks']
