[package]
authors = ['Mathwallet DevHub <https://github.com/mathwallet>']
description = 'MathChain is the Polkadot Smart Wallet Parachain based on Substrate'
edition = '2018'
homepage = 'https://mathwallet.net/mathchain'
license = 'Unlicense'
name = 'mathchain-runtime'
repository = 'https://github.com/mathwallet/MathChain/'
version = '0.1.0'
publish = false

[package.metadata.docs.rs]
targets = ['x86_64-unknown-linux-gnu']

[build-dependencies]
substrate-wasm-builder = { git = "https://github.com/paritytech/substrate" }

# alias "parity-scale-code" to "codec"
[dependencies.codec]
default-features = false
features = ['derive']
package = 'parity-scale-codec'
version = '2.0.1'

[dependencies]
hex-literal = { optional = true, version = '0.3.1' }

# local dependencies
# pallet-template = { path = '../pallets/template', default-features = false, version = '0.0.1' }

# Substrate dependencies
frame-benchmarking = { default-features = false, optional = true, git = "https://github.com/paritytech/substrate" }
frame-executive = { default-features = false, git = "https://github.com/paritytech/substrate" }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate" }
frame-system-benchmarking = { default-features = false, optional = true, git = "https://github.com/paritytech/substrate" }
frame-system-rpc-runtime-api = { default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-account-service = { default-features = false, path = "../frame/account-service" }
pallet-aura = { default-features = false, git = "https://github.com/paritytech/substrate" }
# pallet-balances = { default-features = false, path = "../frame/balances" }
pallet-balances = { default-features = false, git = "https://github.com/paritytech/substrate"  }
pallet-ethereum = { default-features = false, git = "https://github.com/paritytech/frontier", branch = "master" }
pallet-evm = { default-features = false, git = "https://github.com/paritytech/frontier", branch = "master" }
pallet-evm-precompile-simple = { default-features = false, git = "https://github.com/paritytech/frontier", branch = "master" }
pallet-evm-precompile-sha3fips = { default-features = false, git = "https://github.com/paritytech/frontier", branch = "master" }
pallet-evm-precompile-modexp = { default-features = false, git = "https://github.com/paritytech/frontier", branch = "master" }
pallet-dynamic-fee = { git = "https://github.com/paritytech/frontier", branch = "master" }
pallet-grandpa = { default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-randomness-collective-flip = { default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-recovery = { default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-sudo = { default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-timestamp = { default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-transaction-payment = { default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-transaction-payment-rpc-runtime-api = { default-features = false, git = "https://github.com/paritytech/substrate" }
pallet-session = { default-features = false, git = "https://github.com/paritytech/substrate" }
sp-api = { default-features = false, git = "https://github.com/paritytech/substrate" }
sp-block-builder = { default-features = false, git = "https://github.com/paritytech/substrate" }
sp-consensus-aura = { default-features = false, git = "https://github.com/paritytech/substrate" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate" }
sp-inherents = { default-features = false, git = "https://github.com/paritytech/substrate" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate" }
sp-offchain = { default-features = false, git = "https://github.com/paritytech/substrate" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate" }
sp-session = { default-features = false, git = "https://github.com/paritytech/substrate" }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate" }
sp-transaction-pool = { default-features = false, git = "https://github.com/paritytech/substrate" }
sp-version = { default-features = false, git = "https://github.com/paritytech/substrate" }

secretstore-runtime-module = { package = "parity-secretstore-substrate-runtime-module", path = "../frame/secret-store/module", default-features = false }
secretstore-runtime-primitives = { package = "parity-secretstore-substrate-runtime-primitives", path = "../frame/secret-store/primitives", default-features = false }

fp-rpc = { default-features = false, git = "https://github.com/paritytech/frontier", branch = "master" }
pallet-validator-set = { default-features = false, path = "../frame/validator-set" }

[features]
default = ['std']
runtime-benchmarks = [
    'hex-literal',
    'frame-benchmarking',
    'frame-support/runtime-benchmarks',
    'frame-system-benchmarking',
    'frame-system/runtime-benchmarks',
    'pallet-balances/runtime-benchmarks',
    'pallet-timestamp/runtime-benchmarks',
    'sp-runtime/runtime-benchmarks',
]
std = [
    'codec/std',
    'frame-executive/std',
    'frame-support/std',
    'frame-system/std',
    'frame-system-rpc-runtime-api/std',
    'pallet-account-service/std',
    'pallet-aura/std',
    'pallet-balances/std',
    'pallet-grandpa/std',
    'pallet-randomness-collective-flip/std',
    'pallet-recovery/std',
    'pallet-sudo/std',
    # 'pallet-template/std',
    'pallet-timestamp/std',
    'pallet-transaction-payment/std',
    'pallet-transaction-payment-rpc-runtime-api/std',
    'pallet-validator-set/std',
    'pallet-ethereum/std',
    'pallet-evm/std',
    'sp-api/std',
    'sp-block-builder/std',
    'sp-consensus-aura/std',
    'sp-core/std',
    'sp-inherents/std',
	"sp-io/std",
    'sp-offchain/std',
    'sp-runtime/std',
    'sp-session/std',
    'sp-std/std',
    'sp-transaction-pool/std',
    'sp-version/std',
    'secretstore-runtime-module/std',
	'secretstore-runtime-primitives/std',
]
