[package]
name = "mathchain-consensus-primitives"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
description = "Primitives for Mathchain consensus"
edition = "2018"
license = "Apache-2.0"
homepage = "https://mathwallet.net/mathchain"
repository = "https://github.com/mathwallet/MathChain/"

[dependencies]
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "2a7aefb9" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "2a7aefb9" }
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "2a7aefb9" }
codec = { package = "parity-scale-codec", version = "2.1.0", default-features = false, features = ["derive"] }

[features]
default = ["std"]
std = [
	"sp-std/std",
	"sp-runtime/std",
	"sp-core/std",
	"codec/std",
]
