[package]
name = "pallet-account-service"
version = "2.0.0"
authors = ["Hg <hging3@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://mathchain.org"
repository = "https://github.com/mathwallet/mathchain/"
description = "FRAME pallet for account management"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.1", default-features = false, features = ["derive"] }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "5f73ba1f" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "5f73ba1f" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "5f73ba1f" }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "5f73ba1f" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "5f73ba1f" }

[dev-dependencies]
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "5f73ba1f" }

[features]
default = ["std"]
std = [
	"codec/std",
	"sp-std/std",
	"sp-io/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
]
