[package]
name = "pallet-account-service"
version = "2.0.0"
authors = ["Hg <hging3@gmail.com>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://mathchain.org"
repository = "https://github.com/mathwallet/mathchain/"
description = "FRAME pallet for account management"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.1.0", default-features = false, features = ["derive"] }
sp-std = { default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "2a7aefb9" }
sp-io = { default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "2a7aefb9" }
sp-runtime = { default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "2a7aefb9" }
frame-support = { default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "2a7aefb9" }
frame-system = { default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "2a7aefb9" }

[dev-dependencies]
sp-core = { default-features = false, git = "https://github.com/paritytech/substrate.git", rev = "2a7aefb9" }

[features]
default = ["std"]
std = [
	"codec/std",
	"sp-std/std",
	"sp-io/std",
	"sp-runtime/std",
	"frame-support/std",
	"frame-system/std",
]
