[package]
name = "pallet-balances"
version = "2.0.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2018"
license = "Apache-2.0"
homepage = "https://substrate.dev"
repository = "https://github.com/paritytech/substrate/"
description = "FRAME pallet to manage balances"
readme = "README.md"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
serde = { version = "1.0.101", optional = true }
codec = { package = "parity-scale-codec", version = "2.0.1", default-features = false, features = ["derive"] }
sp-api = {default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-std = {default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-runtime = {default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
frame-benchmarking = {default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master", optional = true }
frame-support = {default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
frame-system = {default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
chrono = { version = "0.4", default-features = false, features = ["alloc"] }
pallet-timestamp = {default-features = false, git = "https://github.com/paritytech/substrate.git", branch = "master" }
[dev-dependencies]
sp-io = {git = "https://github.com/paritytech/substrate.git", branch = "master" }
sp-core = {git = "https://github.com/paritytech/substrate.git", branch = "master" }
pallet-transaction-payment = {git = "https://github.com/paritytech/substrate.git", branch = "master" }

[features]
default = ["std"]
std = [
	"serde",
	"codec/std",
	"chrono/std",
	"sp-api/std",
	"sp-std/std",
	"sp-runtime/std",
	"frame-benchmarking/std",
	"frame-support/std",
	"frame-system/std",
]
runtime-benchmarks = ["frame-benchmarking"]
